--- a/pages/sinaisesintomas.html
+++ b/pages/sinaisesintomas.html
@@ -145,147 +145,311 @@
         <div class="casa mt-4">
             <div class="column">
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="gap: 133px; width: 100%;">CAUSADO POR ANIMAIS
+                    <div class="descrition d-flex" style="gap: 68px; width: 100%;">ABDOMEM SENSÍVEL OU RÍGIDO
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 101px;">COM MEIO DE TRANSPORTE
+                    <div class="descrition d-flex" style="width: 100%; gap: 101px;">AGITAÇÃO 
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DESMORONAMENTO/ DESLIZAMENTO
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">ANGINA DE PEITO
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 120px;">EMERGÊNCIA MÉDICA
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">BRADICARDIA 
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 120px;">QUEDA DE ALTURA 2M
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">BRONCO-ASPIRADO
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 154px;">TENTATIVA DE SUICÍDIO
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">CIANOSE 
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 69px;">QUEDA PRÓPRIA ALTURA
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DECORTICAÇÃO
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 120px;">AFOGAMENTO
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DESCEREBRAÇÃO
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 120px;">AGRESSÃO
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DESVIO DE TRAQUÉIA
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 108px;">ATROPELAMENTO
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL 
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">ESFISEMA SUBCUTÂNEO
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">FACE PÁLIDA
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">HIPERTENSÃO
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL 
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL 
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL 
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL 
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL 
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL 
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL 
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL 
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>
+                
             </div>
             <div class="column">
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 90px;">CHOQUE ELÉTRICO
+                    <div class="descrition d-flex" style="width: 100%; gap: 90px;">AFUNDAMENTO DE CRÂNIO
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 120px;">DESABAMENTO
+                    <div class="descrition d-flex" style="width: 100%; gap: 120px;">AMNÉSIA 
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 120px;">DOMÉSTICO
+                    <div class="descrition d-flex" style="width: 100%; gap: 120px;">APINÉIA 
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 120px;">ESPORTIVO
+                    <div class="descrition d-flex" style="width: 100%; gap: 90px;">BRADIPNÉIA 
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 120px;">INTOXICAÇÃO
+                    <div class="descrition d-flex" style="width: 100%; gap: 120px;">CEFALÉIA
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 120px;">QUEDA BICICLETA
+                    <div class="descrition d-flex" style="width: 100%; gap: 90px;">CONVULSÃO
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 120px;">QUEDA MOTO
+                    <div class="descrition d-flex" style="width: 100%; gap: 120px;">DEFOMIDADE
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 115px;">QUEDA NÍVEL 2M
+                    <div class="descrition d-flex" style="width: 100%; gap: 120px;">DESMAIO
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 120px;">TRABALHO
+                    <div class="descrition d-flex" style="width: 100%; gap: 90px;">DISPNÉIA
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
                 <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%; gap: 120px;">TRANSFERÊNCIA
+                    <div class="descrition d-flex" style="width: 100%; gap: 120px;">EDEMA
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                         </div>
                     </div>
                 </div>
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">ESTASE DE JUGULAR
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">HEMORRAGIA 
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">HIPOTENSÃO
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL 
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL 
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL 
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL 
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL 
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL 
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL 
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>
+                <div class="block px-3">
+                    <div class="descrition d-flex" style="width: 100%; gap: 31px;">DOR LOCAL 
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+
             </div>
         </div>
         <!-- Botão Voltar e Proxima -->
